// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckBox.svelte > should apply custom class names 1`] = `
<body>
  <div>
    <checkbox
      aria-checked="unchecked"
      aria-disabled="false"
      class="flex flex-row items-center leading-loose cursor-pointer select-none checkbox custom-class"
      role="checkbox"
      tabindex="0"
    >
      <label
        class="flex flex-row items-center gap-1 leading-loose"
      >
        <input
          hidden=""
          name="test"
          type="checkbox"
        />
         
        <icon
          class="checkbox-unchecked"
        />
         
      </label>
    </checkbox>
  </div>
</body>
`;

exports[`CheckBox.svelte > should render the navigation CheckBox 1`] = `
<body>
  <div>
    <checkbox
      aria-checked="unchecked"
      aria-disabled="false"
      class="flex flex-row items-center leading-loose cursor-pointer select-none checkbox "
      role="checkbox"
      tabindex="0"
    >
      <label
        class="flex flex-row items-center gap-1 leading-loose"
      >
        <input
          hidden=""
          name="test"
          type="checkbox"
        />
         
        <icon
          class="checkbox-unchecked"
        />
         
      </label>
    </checkbox>
  </div>
</body>
`;
